Report timeseries chart: Implement rest of point shapes. Improve lines rendering with filled area.